--- a/app/views/Home/index.html
+++ b/app/views/Home/index.html
@@ -7,15 +7,23 @@
 	<meta name="keywords" content="${appConfig?.keywords}"/>
 	<link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon"/>
 	<link rel="stylesheet" type="text/css" href="/public/lib/tmailsider/css/jquery.tmailsider.css" />
+	<link rel="stylesheet" type="text/css" href="/public/css/style.css"></link>
+	<link rel="stylesheet" type="text/css" href="/public/css/custom.css" />
 	<script type="text/javascript" src="/public/lib/jquery/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="/public/javascripts/ajax.js"></script>
 </head>
 <body>
+        <!-- top bar -->
+        <div id="top_bar">
+            <div class="wrapper">
+                 #{include 'tags/top_bar.html'/}
+            </div>
+        </div>
 	<div class="yourweb_container">
 		<div style="height:60px;overflow:hidden;"></div>
 		<div id="Z_RightSide" class="sidebar">
 			<h1>仿天猫导航</h1>
-			<p>仿淘宝天猫左侧分类导航 兼容IE6(没有折叠效果), IE7 IE8及以上 Firefox,Chrome等主流浏览器<br/>Design by 夏の寒风 QQ:490720430</p>
+			<p></p>
 		</div>
 	</div><!--yourweb_container end-->
 	
