--- a/app/views/Secure/login.html
+++ b/app/views/Secure/login.html
@@ -5,6 +5,7 @@
 	<meta name="keywords" content="${appConfig?.keywords}"></meta>
 	<link rel="shortcut icon" href="/public/images/favicon.ico" type="image/x-icon"></link>
 	<link rel="stylesheet" type="text/css" href="/public/css/login.css"></link>
+	<link rel="stylesheet" type="text/css" href="/public/css/style.css"></link>
 	<script type="text/javascript" src="/public/lib/jquery/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript">
 	$(function(){
