增加欢迎页面

--- a/app/views/UserHome/welcome.html
+++ b/app/views/UserHome/welcome.html
@@ -1,1 +1,58 @@
-welcome
+<!-- <div class="username">
+	<div id="userinfodisp" class="fl ftx-03">
+		<strong>xctoyata@163.com</strong>,欢迎您!&nbsp;&nbsp;&nbsp; 级别： 
+		<a href="/usergrade" class="ajax" target="#main_content">
+			<img src="/public/images/grade/grade-1.png">(金牌会员)
+		</a>
+	</div>
+	<div id="jdTask" class="extra"></div>
+</div> -->
+<div class="vcard">
+	<!-- <img class="thumbnail" src="http://wwc.taobaocdn.com/avatar/getAvatar.do?userId=279257634&amp;width=100&amp;height=100&amp;type=sns"> -->
+	<ul style="margin: 10px 0">
+		<li class="v-heading">
+			<strong>xctoyata@163.com</strong>,欢迎您!&nbsp;&nbsp;&nbsp; 级别： 
+			<a href="/usergrade" class="ajax" target="#main_content">
+				<img src="/public/images/grade/grade-1.png">(金牌会员)
+			</a>
+		</li>
+		<li>
+			<span class="item-key">待支付订单</span>
+			<div class="vcard-item">0</div>
+		</li>
+		<li>
+			<span class="item-key">待评价商品</span>
+			<div class="vcard-item">0</div>
+		</li>
+		<li>
+			<span class="item-key">待晒单商品</span>
+			<div class="vcard-item">1</div>
+		</li>
+		<li>
+			<span class="item-key">账户余额</span>
+			<div class="vcard-item">￥0.00  余额充值</div>
+		</li>
+		<li>
+			<span class="item-key">我的积分</span>
+			<div class="vcard-item">102</div>
+		</li>
+		<li>
+			<span class="item-key">账户提醒</span>
+			<div class="vcard-item">提醒/通知(0)  咨询回复(0)</div>
+		</li>
+		<li>
+			<span class="item-key">上次登录时间</span>
+			<div class="vcard-item">2013-01-20 10:20:14</div>
+		</li>
+		<li>
+			<span class="item-key">其他:</span>
+			<div class="vcard-item">
+				<ul class="list_a">
+					<li>English</li>
+					<li>French</li>
+					<li>German</li>
+				</ul>
+			</div>
+		</li>
+	</ul>
+</div>
