--- a/public/css/style.css
+++ b/public/css/style.css
@@ -95,3 +95,28 @@ position: relative;
 z-index: 15;
 cursor: pointer;
 }
+
+/*bootcss*/
+	
+/* vcard */	
+.vcard .thumbnail {float:left}
+.vcard > ul {list-style:none;margin:10px 0 0 120px;overflow:hidden}
+.vcard > ul > li:first-child {border-top:1px dashed #dcdcdc}
+.vcard > ul > li {padding:8px;border-bottom:1px dashed #dcdcdc;overflow:hidden}
+.vcard .item-key {float:left;color:#888}
+.vcard .vcard-item {margin-left:120px}
+.vcard .v-heading {background:#F0F9FF;font-weight:700}
+.vcard .v-heading span {font-weight:100;font-size:11px;color:#666}
+.vcard .item-list-more,.vcard .thumbnail.item-list-more {display:none}
+		
+.list_a li {
+background: url(/public/images/bullet_blue.png) no-repeat 3px 4px;
+padding-left: 25px;
+}
+li {
+display: list-item;
+text-align: -webkit-match-parent;
+}
+.list_a, .list_b, .list_c, .list_d {
+list-style: none;
+}
