--- a/app/views/UserHome/index.html
+++ b/app/views/UserHome/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/bootstrap-responsive.min.css"></link>
 	<link rel="stylesheet" type="text/css" href="/public/lib/bootstrap/css/layoutit.css"></link>
+	<link rel="stylesheet" type="text/css" href="/public/css/style.css"></link>
 	<script type="text/javascript" src="/public/lib/jquery/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="/public/javascripts/ajax.js"></script>
 	<script type="text/javascript" src="@{'/public/javascripts/head.load.min.js'}"></script>
