增加用户信息

--- a/app/views/UserHome/index.html
+++ b/app/views/UserHome/index.html
@@ -14,6 +14,9 @@
 	<script type="text/javascript" src="/public/javascripts/ajax.js"></script>
 	<script type="text/javascript" src="@{'/public/javascripts/head.load.min.js'}"></script>
 	<script type="text/javascript" src="/public/lib/bootstrap/js/bootstrap.min.js"></script>
+	<style type="text/css">
+		input{height:30px}
+	</style>
 </head>
 <body>
 <div class="container-fluid">
@@ -99,7 +102,7 @@
 	<div class="row-fluid">
 		<div class="span2 column">
 			<div class="mt-avatar">
-				<a class="mt-user-avatar" href="/myuserinfo" target="_blank">
+				<a class="mt-user-avatar ajax" href="/myinfo" target="#main_content">
 					<img src="http://wwc.taobaocdn.com/avatar/getAvatar.do?userId=279257634&amp;width=100&amp;height=100&amp;type=sns"/>
 				</a>
 			</div>
