--- a/app/views/UserHome/index.html
+++ b/app/views/UserHome/index.html
@@ -12,8 +12,9 @@
 	<link rel="stylesheet" type="text/css" href="/public/css/style.css"></link>
 	<script type="text/javascript" src="/public/lib/jquery/jquery-1.8.2.min.js"></script>
 	<script type="text/javascript" src="/public/javascripts/ajax.js"></script>
-	<script type="text/javascript" src="@{'/public/javascripts/head.load.min.js'}"></script>
+	<script type="text/javascript" src="/public/javascripts/head.load.min.js"></script>
 	<script type="text/javascript" src="/public/lib/bootstrap/js/bootstrap.min.js"></script>
+	<script type="text/javascript" src="/public/javascripts/common.js"></script>
 	<style type="text/css">
 		input{height:30px}
 	</style>
@@ -175,9 +176,11 @@
 </div>
 <script type="text/javascript">
 	//head.js("");
-	head.ready(function(){
+	//head.ready(function(){
 	    //load("#main_content","/mywelcome");
-	});
+	    
+	//});
+	
 </script>
 </body>
 </html>
