--- a/app/views/UserHome/cart.html
+++ b/app/views/UserHome/cart.html
@@ -21,7 +21,7 @@
 	<tbody>
 		<tr class="odd">
 			<td class="tac">
-				<input type="checkbox" name="row_sel" class="row_sel">
+				<input type="checkbox" name="row_sel" class="row_sel"><!-- 点击checkbox实时取得商品价格 -->
 			</td>
 			<td>
 				<div>店铺：<a href="" target="_blank">AAAA</a></div>
@@ -40,7 +40,7 @@
 	            <em class="error-msg" style="display:none"></em>
 			</td>
 			<td class="tac">
-				<span class="classAmount">45</span>
+				<span class="classAmount">1.30</span>
 			</td>
 			<td class="tac">
 				<a href="#" title="Delete">
@@ -76,29 +76,26 @@
 			</td>
 		</tr>
 	</tbody>
+	
+	<tfoot class="float-bar">
+		<tr>
+			<td style="text-align:center;" class="table_checkbox" style="width: 13px;">
+				<input type="checkbox" name="select_rows" class="select_rows" data-tableid="dt_gal">
+			</td>
+			<td colspan="4">
+				<span class="total-price g_price">
+					商品总价(不含运费)：
+					<span>¥</span>
+					<em class="total" id="J_Total" tabindex="0">0.00</em>
+				</span>
+				<button class="fr btn btn-primary">结算</button>
+			</td>
+			<td class="tac">
+				<a href="#" title="Delete">
+					<i class="icon-trash"></i>
+				</a>
+			</td>
+		</tr>
+	</tfoot>
 </table>
-<div style="position:relative;"><div id="float-bar" class="float-bar clearfix default" style="position: static;">
-		<span class="select-all mg-left"><input type="checkbox" id="floatBarSelectAll" data-point-url="http://log.mmstat.com/tbcart.1.3" class="J_MakePoint"> <label for="floatBarSelectAll">全选</label></span>
-        <span tabindex="0" data-spm="1000639" data-point-name="tbcart.1.18" class="del-items mg-left J_MakePoint" title="批量删除" id="J_DelSelect">批量删除</span>
-        <span tabindex="0" data-spm="1000640" data-point-name="tbcart.1.49" class="del-invalid mg-left J_MakePoint" title="清除失效宝贝" id="J_DelInvaid">清除失效宝贝</span>
-        <span tabindex="0" class="fav-selected mg-left J_MakePoint" title="批量移入收藏夹" id="J_FavSelected">批量移入收藏夹</span>
-        
-        <div id="J_FavSelectTips" style="display: none;" class="msg mg-left"></div>
-        <div id="J_CleanInvlid" class="msg" style="display: none;position:absolute;left:180px;top:5px;"></div>
-        <div id="J_UncodNumMessage" class="kd-popup uncod-msg hidden" style="display: none;">
-            <div class="box">
-                <div class="bd">
-                    有<span class="J_UncodNum uncod-num"></span>种宝贝因不支持货到付款从结果中移除。
-                </div>
-                <a href="" title="" class="close"><span>关闭</span></a>
-            </div>
-            <i class="bottom"></i>
-        </div>
-        <button class="btn J_MakePoint un-go" data-spm="1000641" type="button" id="J_Go" data-point-name="tbcart.1.48" data-addfastbuy="true" disabled="disabled">结　算
-        </button>
-                <div class="select-cod select-uncod" id="J_SelectCodContainer"><label for="J_SelectCod"><input type="checkbox" id="J_SelectCod" data-point-name="tbcart.1.16" class="sel-cod J_MakePoint">使用货到付款</label>
-        </div>
-                <span class="total-price g_price">商品总价(不含运费)：<span>¥</span><em class="total" id="J_Total" tabindex="0">0.00</em></span>
-        <i class="goto J_MakePoint" data-spm="1000643" data-point-name="tbcart.1.19" title="返回顶部" style=""></i>
-    </div></div>
 <script src="/public/javascripts/cart.js" type="text/javascript"></script>
