--- a/app/views/UserHome/index.html
+++ b/app/views/UserHome/index.html
@@ -16,7 +16,8 @@
 	<script type="text/javascript" src="/public/lib/bootstrap/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="/public/javascripts/common.js"></script>
 	<style type="text/css">
-		input{height:30px}
+		input[type="text"]{height:25px}
+		/*a:-webkit-any-link {color: -webkit-link;text-decoration: underline;cursor: hand;}*/
 	</style>
 </head>
 <body>
