--- a/app/views/UserHome/index.html
+++ b/app/views/UserHome/index.html
@@ -167,7 +167,7 @@
 			</ul>
 		</div>
 		<div class="span10 column ui-sortable">
-			<div style="height:700px;" id="main_content">
+			<div style="min-height:537px;" id="main_content">
 				<script>
 					load("#main_content","/mywelcome");
 				</script>
