--- a/app/views/UserHome/order.html
+++ b/app/views/UserHome/order.html
@@ -1,11 +1,12 @@
 <table class="table table-striped table-bordered dTableR" id="dt_a">
     <thead>
         <tr>
-            <th>Rendering engine</th>
-            <th>Browser</th>
-            <th>Platform(s)</th>
-            <th>Engine version</th>
-            <th>CSS grade</th>
+            <th style="width: 57px;"></th>
+            <th>订单商品</th>
+            <th style="width: 70px;">订单金额</th>
+            <th style="width: 160px;">订单时间</th>
+            <th style="width: 65px;">状态</th>
+            <th style="width: 57px;">操作</th>
         </tr>
     </thead>
     <tbody>
