order info nextwrite

--- a/app/views/UserHome/deliveryAddress.html
+++ b/app/views/UserHome/deliveryAddress.html
@@ -1,1 +1,7 @@
-deliveryAddress
+<div class="box_c_content box_with_topborder" id="divAddress" style="border-top-color: white;">
+	<ul>
+	</ul>
+</div>
+<script>
+     load('#divAddress ul','@{UserHomeViews.deliveryAddressView()}?p=1');
+</script>
