--- a/app/views/UserHome/order.html
+++ b/app/views/UserHome/order.html
@@ -22,43 +22,41 @@
 	</div>
 </div>
 
-<table class="table table-striped table-bordered dTableR" id="myorder">
-	<thead>
-		<tr>
-			<th style="width: 57px;"></th>
-			<th>订单商品</th>
-			<th style="width: 70px;">订单金额</th>
-			<th style="width: 160px;"><select id="submitDate" name="submitDate" class="sele" searchType="date">
-					<option value="0" selected="">全部时间</option>
-					<option value="1">最近三个月</option>
-					<option value="2">今年内</option>
-					<option value="8">2012年</option>
-					<option value="3">2011年</option>
-					<option value="4">2010年</option>
-					<option value="5">2009年</option>
-					<option value="6">2008年</option>
-					<option value="7">2008年以前</option>
-			</select></th>
-			<th style="width: 65px;"><select id="orderState" name="orderState" class="sele" searchType="state">
-					<option value="4096" selected="">全部状态</option>
-					<option value="1">等待付款</option>
-					<option value="32">等待自提</option>
-					<option value="128">等待收货</option>
-					<option value="1024">已完成</option>
-					<option value="-1">已取消</option>
-			</select></th>
-			<th style="width: 57px;">操作</th>
-		</tr>
-	</thead>
-	<tbody id="myorderbody">
-		
-	</tbody>
-</table>
+<div id="searchorder">
+	<input type="text" id="orderKey"/><input type="button" class="btn btn-primary" value="查询订单" onclick="searchOrder();"/>
+	<select id="submitDate" name="submitDate" class="sele fr">
+		<option value="0" selected="">全部时间</option>
+		<option value="1">最近三个月</option>
+		<option value="2">今年内</option>
+		<option value="8">2012年</option>
+		<option value="3">2011年</option>
+		<option value="4">2010年</option>
+		<option value="5">2009年</option>
+		<option value="6">2008年</option>
+		<option value="7">2008年以前</option>
+	</select>
+	
+	<select id="orderState" name="orderState" class="sele fr" style="margin-right:10px">
+		<option value="4096" selected="">全部状态</option>
+		<option value="1">等待付款</option>
+		<option value="32">等待自提</option>
+		<option value="128">等待收货</option>
+		<option value="1024">已完成</option>
+		<option value="-1">已取消</option>
+	</select>
+</div>
+				
+<div id="myorderbody">
+</div>
+
 <script>
     load("#myorderbody","@{UserHomeViews.orderView()}?p=1");
 </script>
+<script type="text/javascript" src="/public/javascripts/order.js"></script>
 <style>
 <!--
+	#myorder thead th{vertical-align: middle;}
+	#submitDate,#orderState{margin:0, 10px; }
 	.sele{width:auto;}
 	table th{text-align:center; }
 	table{ font-size:14px; }
