--- a/app/views/UserHomeViews/orderView.html
+++ b/app/views/UserHomeViews/orderView.html
@@ -18,7 +18,7 @@
 			#{/list}
 				</tbody>
 			</table>
-			#{list.pageajax target:'#myorderbody',p:p,ps:ps,total:total,url:'/UserHomeViews/orderView',countUrl:'/UserHomeViews/orderCount' /}
+			#{list.pageajax target:'#myorderbody',p:p,ps:ps,total:total,url:'/UserHomeViews/orderView',countUrl:'/UserHomeViews/orderCount',param:'a=1&b=2' /}
 		#{/if}
 		#{else}
 					<tr>
