--- a/app/views/Order/uView.html
+++ b/app/views/Order/uView.html
@@ -1,8 +1,7 @@
-<!-- 废弃 -->
 <table class="table table-striped table-bordered dTableR" id="myorder">
 	<thead>
 		<tr>
-			<th style="width: 57px;"></th>
+			<th style="width: 40px;"></th>
 			<th>订单商品</th>
 			<th style="width: 70px;">订单金额</th>
 			<th style="width: 160px;">订单时间</th>
@@ -19,7 +18,7 @@
 			#{/list}
 				</tbody>
 			</table>
-			#{list.pageajax target:'#myorderbody',p:p,ps:ps,total:total,url:'/UserHomeViews/orderView',countUrl:'/UserHomeViews/orderCount',param:'a=1&b=2' /}
+			#{list.pageajax target:'#myorderbody',p:p,ps:ps,total:total,url:'/Order/uView',countUrl:'/Order/uCount',param:'a=1&b=2' /}
 		#{/if}
 		#{else}
 					<tr>
