--- a/app/views/tags/list/userorder.html
+++ b/app/views/tags/list/userorder.html
@@ -6,5 +6,5 @@
 <td class=""><a>${_title}</a></td>
 <td class=""><em class="amount" tabindex="0">￥${_amount}</em></td>
 <td class="">${_time}</td>
-<td class="center"><a>${_state}</a></td>
+<td class="center"><a href="/Order/uDetail" target="_blank">${_state}</a></td>
 <td class="center"><a>删除</a></td>
